Change link text color to fix contrast issue

--- a/wescout/static/css/style.css
+++ b/wescout/static/css/style.css
@@ -128,7 +128,7 @@ a.brand-logo:hover {
 }
 
 #register-link {
-    color: #3FE10E;
+    color: white;
 }
 
 #register-link:hover {
@@ -136,7 +136,7 @@ a.brand-logo:hover {
 }
 
 #login-link {
-    color: #3FE10E;
+    color: white;
 }
 
 #login-link:hover {
